@@ -5,7 +5,7 @@
  * 
  * (c) Copyright 2003, 2004, 2005 Hewlett-Packard Development Company, LP
  * [See end of file]
- * $Id: GenericRuleReasoner.java,v 1.23 2005-04-10 12:45:50 chris-dollin Exp $
+ * $Id: GenericRuleReasoner.java,v 1.24 2005-04-12 16:40:18 der Exp $
  *****************************************************************/
 package com.hp.hpl.jena.reasoner.rulesys;
 
@@ -27,7 +27,7 @@ import java.util.*;
  * generic setParameter calls.
  * 
  * @author <a href="mailto:der@hplb.hpl.hp.com">Dave Reynolds</a>
- * @version $Revision: 1.23 $ on $Date: 2005-04-10 12:45:50 $
+ * @version $Revision: 1.24 $ on $Date: 2005-04-12 16:40:18 $
  */
 public class GenericRuleReasoner extends FBRuleReasoner {
 
@@ -260,7 +260,7 @@ public class GenericRuleReasoner extends FBRuleReasoner {
             
         } else if (parameter.equals(ReasonerVocabulary.PROPruleSet)) {
             if (value instanceof String) {
-                setRules( loadRules( (String)value ) );
+                addRules( loadRules( (String)value ) );
             } else {
                 throw new IllegalParameterException("PROPruleSet value should be a URI string. Was a " + value.getClass());
             }
